--- a/index.html
+++ b/index.html
@@ -42,3 +42,76 @@
 
     </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <title>Isaura's Homepage</title>
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
+    </head>
+
+    <body>
+        <header>
+            <div class="full-wdith">
+                <div class="half-width">
+                    <h1>Welcome to the world of Isa! </h1>
+                </div>
+                <div class="half-width">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#work">Work</a></li>
+                            <li><a href="#contact">Hobbies</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <h2>You can usually find me in the Pinterest office sending out well crafted emails and chatting away in the PinCafe. 
+                I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between puzzling and 
+                eating fresh baked cookies! </h2>  
+        </header>
+        <main>
+                <section id="about">
+                    <div class="full-width">
+                        <h2>
+                            About Isaura
+                        </h2>
+                        <p>
+                            Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. Early mornings and long hot days would teach
+                            me the importance of hard work.  My weekdays would be full of essays, presentations, math tests, book reprots, art projects, and most importantly... my 
+                            path to Stanford University! I graduate class of 2010, with a smile on my face and pride like no other. 
+                            <br>
+                            Flashforward to today and now I am a proud Pinployee 📌! As a People Operations Specialist, I take pride in helping other Pinployees navigate the 
+                            rather complicated world of human resources. Is there any greater feeling than sending out a well worded email?
+                        </p>
+                    </div>
+                </section>
+                <section id="work">
+                    <h2>People Operations Specialist</h2>
+                    <p>As I navigated life after Stanford, my career journey took me to unexpected places. 
+                        I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
+                        managed my dad's business, and soon started to dabble in the world of human resources.
+                        <br>
+                        Not knowing that human resources would be my calling, I stepped into the role of Client Success Consultant at TriNet. 
+                        It was just a temporary position until I found my main calling. 
+                       
+                        Ten years later, I am a proud member of the HR staff at Pinterest! Talk about a <i>temporary role</i>! 
+
+
+                        Results driven professional passionate about creating remarkable employee experiences and cultivating strong client relationships. 
+                        Skilled in HR, Benefits, Payroll, and Operations.
+                    </p>
+                </section>
+
+            <footer>
+                <h3>Created by Beatriz </h3>
+            </footer>
+
+        </main>
+
+    </body>
+</html>
