--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#work">Work</a></li>
-                            <li><a href="#contact">Hobbies</a></li>
+                            <li><a href="#hobbies">Hobbies</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -46,11 +46,12 @@
                 </section>
                 <section id="work">
                     <h2>People Operations Specialist</h2>
-                    <p>As I navigated life after Stanford, my career journey took me to unexpected places. 
+                    <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career journey took me to unexpected places. 
                         I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                         managed my dad's business, and soon started to dabble in the world of human resources.
                         <br>
-                        Not knowing that human resources would be my calling, I stepped into the role of Client Success Consultant at TriNet. 
+                        Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of Client Success Consultant
+                        seemed like a good place to rest and find myself while I looked for a career path better suited for me.
                         It was just a temporary position until I found my main calling. 
                        
                         Ten years later, I am a proud member of the HR staff at Pinterest! Talk about a <i>temporary role</i>! 
@@ -59,6 +60,10 @@
                         Results driven professional passionate about creating remarkable employee experiences and cultivating strong client relationships. 
                         Skilled in HR, Benefits, Payroll, and Operations.
                     </p>
+                </section>
+                <section id="hobbies">
+                    <h2>Puzzles and Cookies</h2>
+                    <p></p>
                 </section>
 
             <footer>
