Added to work section

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                         <br>
                         Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of Client Success Consultant
                         seemed like a good place to rest and find myself while I looked for a career path better suited for me.
-                        It was just a temporary position until I found my main calling. 
-                       
-                        Ten years later, I am a proud member of the HR staff at Pinterest! Talk about a <i>temporary role</i>! 
+                       <br>
+                        Ten years later, I am a proud member of the HR staff at Pinterest! Talk about a <i>temporary career path</i>! My day to day at Pinterest 
+                        requires a few things.  
 
 
                         Results driven professional passionate about creating remarkable employee experiences and cultivating strong client relationships. 
