--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
                         Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of Client Success Consultant
                         seemed like a good place to rest and find myself while I looked for a career path better suited for me.
                        <br>
-                        Ten years later, I am a proud member of the HR staff at Pinterest! Talk about a <i>temporary career path</i>! My day to day at Pinterest 
-                        requires a few things.  
+                        Ten years later, I am a proud member of the HR staff at Pinterest! Umm, wasn't HR supposed to be a <i>temporary career path</i>?! 
+                        <br>
+                        My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... followed by perfectly crafted 
+                        emails, smooth onboarding for new employees and a few calls with my fellow Pinployees! As I strive to create remarkable employee experiences
+                        through our onboarding process, I ensure that I am cultivating strong relationships with other Pinployees so that I 
+                        create a safe space for those that are current and new employees. Human resources can be a complicated field, I strive to make it a little  
+                        easier to understand and friendlier for those that are seeking assistance. 
+                        
 
 
                         Results driven professional passionate about creating remarkable employee experiences and cultivating strong client relationships. 
