Added to hobbies section

--- a/index.html
+++ b/index.html
@@ -45,31 +45,37 @@
                     </div>
                 </section>
                 <section id="work">
-                    <h2>People Operations Specialist</h2>
-                    <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career journey took me to unexpected places. 
-                        I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
-                        managed my dad's business, and soon started to dabble in the world of human resources.
-                        <br>
-                        Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of Client Success Consultant
-                        seemed like a good place to rest and find myself while I looked for a career path better suited for me.
-                       <br>
-                        Ten years later, I am a proud member of the HR staff at Pinterest! Umm, wasn't HR supposed to be a <i>temporary career path</i>?! 
-                        <br>
-                        My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... followed by perfectly crafted 
-                        emails, smooth onboarding for new employees and a few calls with my fellow Pinployees! As I strive to create remarkable employee experiences
-                        through our onboarding process, I ensure that I am cultivating strong relationships with other Pinployees so that I 
-                        create a safe space for those that are current and new employees. Human resources can be a complicated field, I strive to make it a little  
-                        easier to understand and friendlier for those that are seeking assistance. 
-                        
-
-
-                        Results driven professional passionate about creating remarkable employee experiences and cultivating strong client relationships. 
-                        Skilled in HR, Benefits, Payroll, and Operations.
-                    </p>
+                    <div class="full-width">
+                        <h2>People Operations Specialist</h2>
+                        <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career journey took me to unexpected places. 
+                            I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
+                            managed my dad's business, and soon started to dabble in the world of human resources.
+                            <br>
+                            Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of Client Success Consultant
+                            seemed like a good place to rest and find myself while I looked for a career path better suited for me.
+                            <br>
+                            Ten years later, I am a proud member of the HR staff at Pinterest! Umm, wasn't HR supposed to be a <i>temporary career path</i>?! 
+                            <br>
+                            My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... followed by perfectly crafted 
+                            emails, smooth onboarding for new employees and a few calls with my fellow Pinployees! As I strive to create remarkable employee experiences
+                            through our onboarding process, I ensure that I am cultivating strong relationships with other Pinployees so that I 
+                            create a safe space for those that are current and new employees. Human resources can be a complicated field, I strive to make it a little  
+                            easier to understand and friendlier for those that are seeking assistance. 
+                        </p>
+                    </div>
                 </section>
                 <section id="hobbies">
-                    <h2>Puzzles and Cookies</h2>
-                    <p></p>
+                    <div class="full-width">
+                        <h2>Puzzles and Cookies</h2>
+                        <p>
+                            There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a magical landscape, mythical creature
+                            or colorful scenery can be therapeutic. You build a magical scenery piece by piece and get to see it come alive when you apply that last piece.
+                            The sweet feeling of setting down that last piece perfectly is rather magical. 
+                            <br>
+                            Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate calls my name. Is there any better pairing
+                            that freash baked cookies and ice cold milk? 
+                        </p>
+                    </div>
                 </section>
 
             <footer>
