--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
                             About Isaura
                         </h2>
                         <p>
-                            Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. Early mornings and long hot days would teach
-                            me the importance of hard work.  My weekdays would be full of essays, presentations, math tests, book reprots, art projects, and most importantly... my 
+                            Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
+                            Early mornings and long hot days would teach me the importance of hard work.  My weekdays would be full of essays,
+                            presentations, math tests, book reprots, art projects, and most importantly... my 
                             path to Stanford University! I graduate class of 2010, with a smile on my face and pride like no other. 
                             <br>
-                            Flashforward to today and now I am a proud Pinployee 📌! As a People Operations Specialist, I take pride in helping other Pinployees navigate the 
-                            rather complicated world of human resources. Is there any greater feeling than sending out a well worded email?
+                            Flashforward to today and now I am a proud Pinployee 📌! As a People Operations Specialist, I take pride in 
+                            helping other Pinployees navigate the rather complicated world of human resources. 
+                            Is there any greater feeling than sending out a well worded email?
                         </p>
                     </div>
                 </section>
@@ -51,16 +53,18 @@
                             I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                             managed my dad's business, and soon started to dabble in the world of human resources.
                             <br>
-                            Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of Client Success Consultant
-                            seemed like a good place to rest and find myself while I looked for a career path better suited for me.
+                            Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of 
+                            Client Success Consultant seemed like a good place to rest
+                             and find myself while I looked for a career path better suited for me.
                             <br>
                             Ten years later, I am a proud member of the HR staff at Pinterest! Umm, wasn't HR supposed to be a <i>temporary career path</i>?! 
                             <br>
-                            My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... followed by perfectly crafted 
-                            emails, smooth onboarding for new employees and a few calls with my fellow Pinployees! As I strive to create remarkable employee experiences
-                            through our onboarding process, I ensure that I am cultivating strong relationships with other Pinployees so that I 
-                            create a safe space for those that are current and new employees. Human resources can be a complicated field, I strive to make it a little  
-                            easier to understand and friendlier for those that are seeking assistance. 
+                            My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... 
+                            followed by perfectly crafted emails, smooth onboarding for new employees and a few calls with my fellow Pinployees! 
+                            As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am cultivating strong 
+                            relationships with other Pinployees so that I create a safe space for those that are current and new employees. 
+                            Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
+                            those that are seeking assistance. 
                         </p>
                     </div>
                 </section>
@@ -68,21 +72,18 @@
                     <div class="full-width">
                         <h2>Puzzles and Cookies</h2>
                         <p>
-                            There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a magical landscape, mythical creature
-                            or colorful scenery can be therapeutic. You build a magical scenery piece by piece and get to see it come alive when you apply that last piece.
-                            The sweet feeling of setting down that last piece perfectly is rather magical. 
+                            There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a magical landscape, 
+                            mythical creature or colorful scenery can be therapeutic. You build a magical scenery piece by piece and get to see 
+                            it come alive when you apply that last piece. The sweet feeling of setting down that last piece perfectly is rather magical. 
                             <br>
-                            Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate calls my name. Is there any better pairing
-                            that freash baked cookies and ice cold milk? 
+                            Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate calls my name. 
+                            Is there any better pairing that freash baked cookies and ice cold milk? 
                         </p>
                     </div>
                 </section>
-
             <footer>
-                <h3>Created by Beatriz </h3>
+                <h3>Created by <a href="https://holabeatriz.com/"> Beatriz </a></h3>
             </footer>
-
         </main>
-
     </body>
 </html>
