Added linkedin link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <li><a href="#about">About</a></li>
                             <li><a href="#work">Work</a></li>
                             <li><a href="#hobbies">Hobbies</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -79,6 +80,12 @@
                             Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate calls my name. 
                             Is there any better pairing that freash baked cookies and ice cold milk? 
                         </p>
+                    </div>
+                </section>
+                <section id="contact">
+                    <div class="full-width">
+                        <h2>Want to get in contact?</h2>
+                        <p>Check out my <a href="https://www.linkedin.com/in/isauraguerrero/">LinkedIn</a>!</p>
                     </div>
                 </section>
             <footer>
