Added changes to contact me

--- a/index.html
+++ b/index.html
@@ -85,11 +85,14 @@
                 <section id="contact">
                     <div class="full-width">
                         <h2>Want to get in contact?</h2>
-                        <p>Check out my <a href="https://www.linkedin.com/in/isauraguerrero/">LinkedIn</a>!</p>
+                        <p>Check out my <a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a>!
+                        <br>
+                        I look forward to connecting and learning about you! 
+                        </p>
                     </div>
                 </section>
             <footer>
-                <h3>Created by <a href="https://holabeatriz.com/"> Beatriz </a></h3>
+                <h3>Created by <a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></h3>
             </footer>
         </main>
     </body>
