--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
     <head>
+        <meta charset="UTF-8">
         <title>Isaura's Homepage</title>
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet" type="text/css">
     </head>
 
     <body>
