--- a/index.html
+++ b/index.html
@@ -4,30 +4,28 @@
     <head>
         <meta charset="UTF-8">
         <title>Isaura's Homepage</title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <header>
             <div class="full-wdith">
-                <div class="half-width">
-                    <h1>Welcome to the world of Isa! </h1>
-                </div>
-                <div class="half-width">
-                    <nav>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#work">Work</a></li>
-                            <li><a href="#hobbies">Hobbies</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#hobbies">Hobbies</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <h2>You can usually find me in the Pinterest office sending out well crafted emails and chatting away in the PinCafe. 
+            <div class="full-width">
+                <h1>Welcome to the world of Isa! </h1>
+            </div>
+            <h2>You can usually find me in the Pinterest office sending out well crafted emails and chatting away at the PinCafe. 
                 I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between puzzling and 
                 eating fresh baked cookies! </h2>  
         </header>
