Updated css and html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <div class="full-wdith">
+            <div class="full-width">
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -27,7 +27,8 @@
             <h2>You can usually find me in the Pinterest office sending out well crafted emails and chatting away at the PinCafe. 
                 <br>
                 I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between puzzling and 
-                eating fresh baked cookies! </h2>  
+                eating fresh baked cookies! 
+            </h2>  
         </header>
         <main>
                 <section id="about">
@@ -39,9 +40,11 @@
                             Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
                             Early mornings and long hot days would teach me the importance of hard work.  My weekdays would be full of essays,
                             presentations, math tests, book reprots, art projects, and most importantly... my 
-                            path to Stanford University! I graduate class of 2010, with a smile on my face and pride like no other. 
+                            path to Stanford University! 
+                            I graduate class of 2010, with a smile on my face and pride like no other. 
                             <br>
-                            Flashforward to today and now I am a proud Pinployee 📌! As a People Operations Specialist, I take pride in 
+                            Flashforward to today and now I am a proud Pinployee 📌! 
+                            <br>As a People Operations Specialist, I take pride in 
                             helping other Pinployees navigate the rather complicated world of human resources. 
                             Is there any greater feeling than sending out a well worded email?
                         </p>
