--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             <div class="full-width">
                 <h1>Welcome to the world of Isa! </h1>
             </div>
-            <h2>You can usually find me in the Pinterest office sending out well crafted emails and chatting away at the PinCafe. 
-                <br>
-                I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between puzzling and 
-                eating fresh baked cookies! 
+            <h2>
+                You can usually find me in the Pinterest office sending out well crafted emails and chatting away at the PinCafe. 
+            </h2>
+            <h2>
+                I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between 
+                puzzling and eating fresh baked cookies!
             </h2>  
         </header>
         <main>
@@ -38,13 +40,18 @@
                         </h2>
                         <p>
                             Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
-                            Early mornings and long hot days would teach me the importance of hard work.  My weekdays would be full of essays,
-                            presentations, math tests, book reprots, art projects, and most importantly... my 
-                            path to Stanford University! 
+                            Early mornings and long hot days would teach me the importance of hard work.  
+                        </p>
+                        <p>   
+                            My weekdays would be full 
+                            of essays, presentations, math tests, book reprots, art projects, 
+                            and most importantly... my path to Stanford University! 
                             I graduate class of 2010, with a smile on my face and pride like no other. 
-                            <br>
+                        </p>
+                        <p>
                             Flashforward to today and now I am a proud Pinployee 📌! 
-                            <br>As a People Operations Specialist, I take pride in 
+                        </p>
+                        </p>As a People Operations Specialist, I take pride in 
                             helping other Pinployees navigate the rather complicated world of human resources. 
                             Is there any greater feeling than sending out a well worded email?
                         </p>
@@ -56,15 +63,22 @@
                         <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career journey took me to unexpected places. 
                             I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                             managed my dad's business, and soon started to dabble in the world of human resources.
-                            <br>
-                            Not knowing that human resources would be my calling, I started working in HR while at TriNet, the role of 
-                            Client Success Consultant seemed like a good place to rest
-                             and find myself while I looked for a career path better suited for me.
-                            <br>
-                            Ten years later, I am a proud member of the HR staff at Pinterest! Umm, wasn't HR supposed to be a <i>temporary career path</i>?! 
-                            <br>
+                        </p>
+                        <p>
+                            Not knowing that human resources would be my calling, I started working in HR while at TriNet. The role of 
+                            Client Success Consultant seemed like a good place to rest 
+                            and find myself while I looked for a career path better suited for me.
+                        </p>
+                        <p>
+                            Ten years later, I am a proud member of the HR team at Pinterest! Umm, wasn't HR supposed to be a 
+                            <i>temporary career path</i>?! 
+                        </p>
+                        <p>
                             My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... 
-                            followed by perfectly crafted emails, smooth onboarding for new employees and a few calls with my fellow Pinployees! 
+                            followed by perfectly crafted emails, smooth onboarding for new employees and a few calls with my fellow 
+                            Pinployees! 
+                        </p>
+                        <p>
                             As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am cultivating strong 
                             relationships with other Pinployees so that I create a safe space for those that are current and new employees. 
                             Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
@@ -76,12 +90,17 @@
                     <div class="full-width">
                         <h2>Puzzles and Cookies</h2>
                         <p>
-                            There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a magical landscape, 
-                            mythical creature or colorful scenery can be therapeutic. You build a magical scenery piece by piece and get to see 
-                            it come alive when you apply that last piece. The sweet feeling of setting down that last piece perfectly is rather magical. 
-                            <br>
-                            Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate calls my name. 
-                            Is there any better pairing that freash baked cookies and ice cold milk? 
+                            There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a 
+                            magical landscape, mythical creature or colorful scenery can be <i>therapeutic</i>. 
+                        </p>
+                        <p>
+                            You build a magical scenery piece by piece and get to see your hard work come together as a beautiful 
+                            unicorn... or enchanted cottage... or a solid color!
+                             The sweet feeling of setting down that last piece perfectly is rather magical. 
+                        </p>
+                        <p>
+                            Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate 
+                            calls my name. Is there any better pairing that fresh baked cookies and ice cold milk? 
                         </p>
                     </div>
                 </section>
