--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <p>
                             Flashforward to today and now I am a proud Pinployee 📌! 
                         </p>
-                        </p>As a People Operations Specialist, I take pride in 
+                        <p>As a People Operations Specialist, I take pride in 
                             helping other Pinployees navigate the rather complicated world of human resources. 
                             Is there any greater feeling than sending out a well worded email?
                         </p>
