--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </p>
                         <p>   
                             My weekdays would be full 
-                            of essays, presentations, math tests, book reprots, art projects, 
+                            of essays, presentations, math tests, book reports, art projects, 
                             and most importantly... my path to Stanford University! 
                             I graduate class of 2010, with a smile on my face and pride like no other. 
                         </p>
