--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Isaura's Homepage</title>
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -47,6 +48,7 @@
                             of essays, presentations, math tests, book reports, art projects, 
                             and most importantly... my path to Stanford University! 
                             I graduate class of 2010, with a smile on my face and pride like no other. 
+                            Check me out on <a href="https://amstudies.stanford.edu/sites/amstudies/files/media/file/as_newsletter_2010.pdf" target="_blank">page 14!</a>
                         </p>
                         <p>
                             Flashforward to today and now I am a proud Pinployee 📌! 
@@ -71,7 +73,7 @@
                         </p>
                         <p>
                             Ten years later, I am a proud member of the HR team at Pinterest! Umm, wasn't HR supposed to be a 
-                            <i>temporary career path</i>?! 
+                            <span>temporary career path</span>?! 
                         </p>
                         <p>
                             My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... 
