Added span to footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -116,7 +117,7 @@
                     </div>
                 </section>
             <footer>
-                <h3>Created by <a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></h3>
+                <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span></h3>
             </footer>
         </main>
     </body>
