Added linkedin color and font

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -110,14 +111,14 @@
                 <section id="contact">
                     <div class="full-width">
                         <h2>Want to get in contact?</h2>
-                        <p>Check out my <a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a>!
+                        <p>Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
                         <br>
                         I look forward to connecting and learning about you! 
                         </p>
                     </div>
                 </section>
             <footer>
-                <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span></h3>
+                <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
             </footer>
         </main>
     </body>
