--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <section id="contact">
                     <div class="full-width">
                         <h2>Want to get in contact?</h2>
-                        <p>Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
+                        <p>Check out my <span class="linkedin"><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
                         <br>
                         I look forward to connecting and learning about you! 
                         </p>
