--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                 <section id="contact">
                     <div class="full-width">
                         <h2>Want to get in contact?</h2>
+                        <p>Umm, don't I look adorable!</p>
+                        <img src="img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
                         <p>Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
                         <br>
                         I look forward to connecting and learning about you! 
