Added picture to bottom

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -111,8 +112,9 @@
                 <section id="contact">
                     <div class="full-width">
                         <h2>Want to get in contact?</h2>
-                        <p>Umm, don't I look adorable!</p>
                         <img src="img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
+                        <span class="isaura">Umm, don't I look adorable!</span>
+
                         <p>Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
                         <br>
                         I look forward to connecting and learning about you! 
