--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
     <head>
+        <title>All about Isa!</title>
+        <link rel="stylesheet" href="../css/main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
