--- a/work/index.html
+++ b/work/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
     <head>
+        <title>Work it girl!</title>
+        <link rel="stylesheet" href="../css/main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
+    
     <body>
         <header>
 
