Added header section

--- a/about/index.html
+++ b/about/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
 
     <head>
+        <meta charset="UTF-8">
         <title>All about Isa!</title>
         <link rel="stylesheet" href="../css/main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
+            <div class="full-width">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#hobbies">Hobbies</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="full-width">
+                <h1>About Isaura</h1>
+            </div>
 
         </header>
         <main>
