--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
 
     <head>
+        <meta charset="UTF-8">
         <title>Puzzles and Cookies</title>
         <link rel="stylesheet" href="../css/main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
+            <div class="full-width">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="full-width">
+                <h1>Lets puzzle! </h1>
+                <h3>AND eat cookies too!</h3>
+            </div>
 
         </header>
         <main>
