--- a/work/index.html
+++ b/work/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
 
     <head>
+        <meta charset="UTF-8">
         <title>Work it girl!</title>
         <link rel="stylesheet" href="../css/main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
-    
+
     <body>
         <header>
+            <div class="full-width">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#hobbies">Hobbies</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="full-width">
+                <h1>Pinterest and Isa</h1>
+            </div>
 
         </header>
         <main>
