--- a/about/index.html
+++ b/about/index.html
@@ -12,9 +12,9 @@
             <div class="full-width">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#work">Work</a></li>
-                        <li><a href="#hobbies">Hobbies</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../work/index.html">Work</a></li>
+                        <li><a href="../hobbies/index.html">Hobbies</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
