--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#work">Work</a></li>
-                        <li><a href="#hobbies">Hobbies</a></li>
+                        <li><a href="about/index.html">About</a></li>
+                        <li><a href="work/index.html">Work</a></li>
+                        <li><a href="hobbies/index.html">Hobbies</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
