--- a/work/index.html
+++ b/work/index.html
@@ -13,9 +13,9 @@
             <div class="full-width">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#hobbies">Hobbies</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../about/index.html">About</a></li>
+                        <li><a href="../hobbies/index.html">Hobbies</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
