--- a/about/index.html
+++ b/about/index.html
@@ -26,10 +26,51 @@
         </header>
         <main>
             <section id="early-life">
-
+                <h2>
+                    Early Life
+                </h2>
+                <p>
+                    Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
+                    Early mornings and long hot days would teach me the importance of hard work. Waking up at 5am, rushing to put our merchandise, 
+                    and selling til closing time was a typical weekend at my house. Monday-Friday I would apply myself to school, and on the weekends it
+                    was family time... at the swapmeet. I'd help my parents sell, display merchandise, and clean up. Waking up before the sun rises was 
+                    often difficult as a kid, but now I see the hard work and effor that my parents did for my siblings and I. Without that experience, 
+                    I can't say that I'd be the <i>strong, independent Latina</i> that I am today. 
+                </p>
+                <p>   
+                    My weekdays would be full of essays, presentations, math tests, book reports, art projects,
+                    and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, I joined the 
+                    art club, I spent long hours at the library and made sure everything was in place. All of my hard work ensured that I graduated 
+                    validictorian in highschool and got my my spot at Stanford! 
+                    
             </section>
             <section id="stanford">
-
+                <h2>Stanford</h2>
+                <h3>Class of 2010 🎓</h3>
+                <p>
+                    I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was quite the experience. 
+                    I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at Centro Chicano for most of
+                    my years at Stanford, in that time, I helped set up the Zoot Suit play production, provided other weekly activiites to students, and helped
+                    entering students feel at home.   
+                    <br>
+                    I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any chance to travel and 
+                    experience life. My thirst for life took me to Chile, Rome, Croatia and Germany! The culture, the politics, the lifestyles I experienced
+                    where all incredible. Never did i think I'd be able to sit at the plaza de San Pedro in Chile, or visit the Pope In Rome, see the Berlin Wall 
+                    or visit the deeply emotional Holocaust Museum. 
+                    <br>
+                    My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was rather charming. The bratwurst in Germany was different
+                    yet delicious. BUT the <i>chocolate croissants</i> I had in Germany! Oh my,my, those were to die for! Dreamy, soft, melty chocolate
+                    nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
+                     <br>
+                    Check me out on <a href="https://amstudies.stanford.edu/sites/amstudies/files/media/file/as_newsletter_2010.pdf" target="_blank">page 14!</a>
+                </p>
+                <p>
+                    Flashforward to today and now I am a proud Pinployee 📌! 
+                </p>
+                <p>As a People Operations Specialist, I take pride in 
+                    helping other Pinployees navigate the rather complicated world of human resources. 
+                    Is there any greater feeling than sending out a well worded email?
+                </p>
             </section>
           <footer>
 
