--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -33,7 +33,7 @@
 
             </section>
           <footer>
-
+            <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
           </footer>  
         </main>
 
