Added to css for about and pictures

--- a/about/index.html
+++ b/about/index.html
@@ -4,25 +4,23 @@
     <head>
         <meta charset="UTF-8">
         <title>All about Isa!</title>
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <header class="about">
             <div class="full-width">
                 <nav>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../work/index.html">Work</a></li>
                         <li><a href="../hobbies/index.html">Hobbies</a></li>
-                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="full-width">
                 <h1>About Isaura</h1>
             </div>
-
         </header>
         <main>
             <section id="early-life">
@@ -31,9 +29,16 @@
                 </h2>
                 <p>
                     Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
-                    Early mornings and long hot days would teach me the importance of hard work. Waking up at 5am, rushing to put our merchandise, 
-                    and selling til closing time was a typical weekend at my house. Monday-Friday I would apply myself to school, and on the weekends it
-                    was family time... at the swapmeet. I'd help my parents sell, display merchandise, and clean up. Waking up before the sun rises was 
+                    Early mornings and long hot days would teach me the importance of hard work. 
+                </p>
+                <p>
+                    Waking up at 5am, rushing to put our merchandise, and selling til closing time was a typical weekend at my house.
+                    Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet.
+                    I'd help my parents sell, display merchandise, and clean up. 
+                </p>
+                <p> <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/></p>
+                <p>    
+                    Waking up before the sun rises was 
                     often difficult as a kid, but now I see the hard work and effort that my parents did for my siblings and I. Without that experience, 
                     I can't say that I'd be the <i>strong, independent Latina</i> that I am today. 
                 </p>
