--- a/index.html
+++ b/index.html
@@ -33,46 +33,17 @@
             </h2>  
         </header>
         <main>
-                <section id="about">
+                <section id="chat">
                     <div class="full-width">
                         <h2>
-                            About Isaura
+                            Isaura
                         </h2>
+                        <p> <img src="img/Isaura_Professional_Photo.png" alt="picture of Isaura"/></p>
                     </div>
                 </section>
                 <section id="work">
                     <div class="full-width">
                      
-                    </div>
-                </section>
-                <section id="hobbies">
-                    <div class="full-width">
-                        <h2>Puzzles and Cookies</h2>
-                        <p>
-                            There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a 
-                            magical landscape, mythical creature or colorful scenery can be <i>therapeutic</i>. 
-                        </p>
-                        <p>
-                            You build a magical scenery piece by piece and get to see your hard work come together as a beautiful 
-                            unicorn... or enchanted cottage... or a solid color!
-                             The sweet feeling of setting down that last piece perfectly is rather magical. 
-                        </p>
-                        <p>
-                            Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate 
-                            calls my name. Is there any better pairing that fresh baked cookies and ice cold milk? 
-                        </p>
-                    </div>
-                </section>
-                <section id="contact">
-                    <div class="full-width">
-                        <h2>Want to get in contact?</h2>
-                        <img src="img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
-                        <span class="isaura">Umm, don't I look adorable!</span>
-
-                        <p>Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
-                        <br>
-                        I look forward to connecting and learning about you! 
-                        </p>
                     </div>
                 </section>
             <footer>
