--- a/work/index.html
+++ b/work/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Work it girl!</title>
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
 
