--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Puzzles and Cookies</title>
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -27,10 +27,27 @@
         </header>
         <main>
             <section id="puzzles">
-
+                    <div class="full-width">
+                        <h2>When All The Pieces Fit</h2>
+                        <p>
+                            There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a 
+                            magical landscape, mythical creature or colorful scenery can be ✨<i>therapeutic</i>✨. 
+                        </p>
+                        <p>
+                            You build a magical scenery piece by piece and get to see your hard work come together as a beautiful 
+                            unicorn... or enchanted cottage... or a solid color!
+                            The sweet feeling of setting down that last piece perfectly is rather magical. 
+                        </p>
+                    </div>
             </section>
             <section id="cookies">
-
+                <div class="full-width">
+                    <h2>Warm Cookies and Ice Cold Milk</h2>
+                    <p>
+                        Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate 
+                        calls my name. Is there any better pairing that fresh baked cookies and ice cold milk? 
+                    </p>
+                </div>    
             </section>
           <footer>
             <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
